# eventageous

./: .gitignore  .tool-versions  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: deploy.yml  mdbook.yml  rust.yml
assets/: index.html
assets/api/: events.json
assets/assets/: americano-frontend.css  americano-frontend.css.map  americano-frontend.js  americano-frontend.map  chunk.app.0a281ae9fbba86963b99.js  chunk.app.593857fccb00030b0713.js  chunk.app.7c55f81f9e4eb83d2e18.js  chunk.app.9bdcb5e0dd8015618605.js  chunk.app.b5ecb3c7f74434910021.js  chunk.app.fb23907feffdd83e5b15.js  chunk.tests.0ac3da500bfb818e9757.js  chunk.tests.4b0ee463fe2a4ee9e1ee.js  chunk.tests.7b63c41404b19a744b0a.js  chunk.tests.a3a26a6a25e8945bb76c.js  chunk.tests.a4fa1cdb2c4c7dacfbc1.js  chunk.tests.b9e5701d8eee0af180ff.js  chunk.vendors-node_modules_ember-page-title_dist_helpers_page-title_js-node_modules_ember-page-titl-9a1fdf.1827305f1b64d2c62a87.js  chunk.vendors-node_modules_ember-page-title_dist_helpers_page-title_js-node_modules_ember-page-titl-9a1fdf.788522ab56402be227f6.js  chunk.vendors-node_modules_ember-page-title_dist_helpers_page-title_js-node_modules_ember-page-titl-9a1fdf.b676de83bf8e5b8b47ee.js  chunk.vendors-node_modules_ember-qunit_dist_index_js.120885a22d657dee2ee3.js  chunk.vendors-node_modules_ember-qunit_dist_index_js.232cb880e934c0606adc.js  chunk.vendors-node_modules_ember-qunit_dist_index_js.c867820268198bc0aaee.js  test-support.js  test-support.map  tests.js  tests.map  vendor.js  vendor.map
assets/tests/: index.html
backend/src/: main.rs
book/: book.toml
book/src/: SUMMARY.md  contribute.md  how_to.md  setup.md  vision.md
book/src/contribute/: setup.md
book/src/how_to/: customize.md  schedule.md  subscribe.md  view.md
crates/americano_web/: Cargo.toml  index.html
crates/americano_web/src/: app.rs  main.rs
crates/americano_web/style/: main.scss
crates/unterstutzen/: Cargo.toml
crates/unterstutzen/src/: calendar.rs  calendar_transformer.rs  config.rs  error.rs  google_calendar.rs  invite.rs  lib.rs  oauth_config.rs  user_auth.rs
frontend-ember/: .ember-cli  .gitignore  ember-cli-build.js  package-lock.json  package.json
frontend-ember/app/: app.js  index.html  router.js
frontend-ember/app/components/: base.hbs  event.hbs  event.js  login-button.hbs  login-button.js  nav-bar.hbs
frontend-ember/app/helpers/: formatDate.js
frontend-ember/app/routes/: index.js  new-event.js
frontend-ember/app/services/: session.js
frontend-ember/app/styles/: app.scss
frontend-ember/app/templates/: about.hbs  index.hbs  new-event.hbs
frontend-ember/config/: environment.js
frontend-ember/tests/: index.html  test-helper.js
frontend-ember/tests/integration/components/: login-button-test.js
frontend-ember/tests/integration/helpers/: not-test.js
frontend-ember/tests/unit/routes/: add-event-test.js  new-event-test.js
frontend-ember/tests/unit/services/: session-test.js
old/: Cargo.toml
old/src/: main.rs
src/: auth.rs  calendar.rs  calendar_transformer.rs  config.rs  google_calendar.rs  invite.rs  lib.rs  main.rs  oauth_config.rs  user_auth.rs  user_session.rs
src/calendar/: invite.rs  transformer.rs
test_data/: invite.eml
