[package]
name = "eventageous"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
chrono = "0.4.34"
mail-parser = "0.9.2"
serde = "1.0.197"
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-secrets = "0.40.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
unterstutzen = { version = "0.1.0", path = "crates/unterstutzen" }

