[package]
name = "eventageous"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.34", features = ["clock"] }
icalendar = "0.16.0"
ics = "0.5.8"
mail-parser = "0.9.2"
oauth2 = "4.4.2"
reqwest = { version = "0.11.26", features = ["json"] }
serde =  { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.40.0"
shuttle-metadata = "0.41.0"
shuttle-runtime = "0.40.0"
shuttle-secrets = "0.40.0"
thiserror = "1.0.58"
time = "0.3.34"
tokio = "1.28.2"
toml = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tower-sessions = "0.11.0"
tracing = "0.1.40"
urlencoding = "2.1.3"

[dev-dependencies]
expect-test = "1.4.1"

