[package]
name = "americano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde =  { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.5"
reqwest = "0.11"
unterstutzen = { path = "crates/unterstutzen" }
web-sys = "0.3.64"
#americano_web = { path = "crates/americano_web" }
