[package]
name = "americano_web"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = "0.3.1"
unterstutzen = { path = "../unterstutzen" }
web-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
log = "0.4.17"

[profile.release]
debug = true