[package]
name = "unterstutzen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.34"
serde =  { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
# tokio + WASM seems to need "sync","rt" 
tokio = { version = "1.28.2", features = ["sync","rt"] }
toml = "0.7.5"
tracing = "0.1.40"
reqwest = "0.11"
thiserror = "1.0.43"
urlencoding = "2.1.3"

